syntax = "proto3";

package worldbank;

service WorldBank {
    rpc ListRegions (Void) returns (stream Region) {
    }

    rpc ListIncomeLevels (Void) returns (stream IncomeLevel) {
    }

    rpc ListLendingTypes (Void) returns (stream LendingType) {
    }

    rpc ListCountries (Void) returns (stream Country) {
    }

    rpc GetCountry (CountryID) returns (Country) {
    }
}

message SearchString {
    string searchString = 1;
}

message CountryID {
    string id = 1;
}

message Country {
    string id = 1;
    string name = 2;
}

message Region {
    string id = 1;
    string name = 2;
}

message IncomeLevel {
    string id = 1;
    string name = 2;
}

message LendingType {
    string id = 1;
    string name = 2;
}

message Void {
}
